replaced toList() methods with collect(Collector.toList())