@@ -117,7 +117,8 @@ public class StressIT {
 				e.printStackTrace();
 			}
 		}
-		List<Long> completedTimesList = completedTimes.stream().sorted().toList();
+		List<Long> completedTimesList = 
+				completedTimes.stream().sorted().collect(Collectors.toList());
 		int completedTimesListSize = completedTimesList.size();
 		long combinedTime = 0L;
 		for (Long completedTime : completedTimesList) {
@@ -187,7 +188,8 @@ public class StressIT {
 				e.printStackTrace();
 			}
 		}
-		List<Long> completedTimesList = completedTimes.stream().sorted().toList();
+		List<Long> completedTimesList = 
+				completedTimes.stream().sorted().collect(Collectors.toList());
 		int completedTimesListSize = completedTimesList.size();
 		long combinedTime = 0L;
 		for (Long completedTime : completedTimesList) {
